--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vue/composition-api": "^0.3.4",
     "axios": "^0.19.1",
+    "cookie_js": "^1.3.0",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
     "svg-sprite-loader": "^4.1.6",
