--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "^1.19.1",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
+    "vue-quill-editor": "^3.0.6",
     "vue-template-compiler": "^2.6.10"
   },
   "gitHooks": {
